--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
   --card-foreground: oklch(0.25 0.01 250);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.25 0.01 250);
-  --primary: oklch(27.8% 0.033 256.848);
+  --primary: oklch(0.205 0 0);
   --primary-foreground: oklch(1 0 0);
   --secondary: oklch(0.92 0.02 250);
   --secondary-foreground: oklch(0.25 0.01 250);
