--- a/src/main.css
+++ b/src/main.css
@@ -39,7 +39,7 @@
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: rgba(240, 102, 31);
+  --primary: oklch(0.205 0 0);
   --primary-foreground: oklch(0.205 0 0);
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
@@ -144,6 +144,9 @@
   --color-sidebar-ring: var(--sidebar-ring);
   --animate-accordion-down: accordion-down 0.2s ease-out;
   --animate-accordion-up: accordion-up 0.2s ease-out;
+
+  /* Break points */
+  --xl--breakpoint-8xl: 1500px;
 
   /*
   ---break---
