fix(auth):validate fullname

--- a/src/main.css
+++ b/src/main.css
@@ -26,6 +26,20 @@
   }
 }
 
+/* Hide browser password reveal icons */
+input[type="password"]::-webkit-credentials-auto-fill-button,
+input[type="password"]::-webkit-caps-lock-indicator,
+input[type="password"]::-webkit-reveal-password-button {
+  display: none !important;
+  visibility: hidden !important;
+  pointer-events: none !important;
+}
+
+input[type="password"]::-ms-reveal,
+input[type="password"]::-ms-clear {
+  display: none !important;
+}
+
 /*
   ---break---
 */
@@ -210,4 +224,18 @@
     background-color: var(--background);
     color: var(--foreground);
   }
+}
+
+/* Hide browser password reveal icons */
+input[type="password"]::-webkit-credentials-auto-fill-button,
+input[type="password"]::-webkit-caps-lock-indicator,
+input[type="password"]::-webkit-reveal-password-button {
+  display: none !important;
+  visibility: hidden !important;
+  pointer-events: none !important;
+}
+
+input[type="password"]::-ms-reveal,
+input[type="password"]::-ms-clear {
+  display: none !important;
 }
