--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@
   --secondary-foreground: oklch(0.25 0.01 250);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.5 0.01 250);
+  --success: oklch(62.06% 0.20812 142.698 / 0.911);
   --accent: oklch(79.2% 0.209 151.711);
   --accent-foreground: oklch(1 0 0);
   --destructive: oklch(0.55 0.22 25);
@@ -74,6 +75,7 @@
   --color-ring: var(--ring);
   --color-sidebar-accent: var(--sidebar-accent);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-success: var(--success);
 }
 
 /* Hide browser password reveal icons */
